e2e/testdata/resource_conditions/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sname
spec:
  crd:
    spec:
      names:
        kind: K8sName
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sname
        violation[{"msg": msg}] {
          input.review.object.metadata.name == "policycontroller-violation"
          msg := "object is called policycontroller-violation"
        }
